Reconfigure project for Java 25 with mandatory requirement documentation
Java 25 Configuration:
- Update pom.xml: Java 25 (was 17) with "REQUIRED" notation
- Enable --enable-preview flags in compiler and surefire plugins
- Update PMD targetJdk to 25
- Update GitHub Actions workflow to use Java 25
- Update JMH benchmark template with preview flag

AI Agent Documentation:
- Add CRITICAL section to .cursorrules emphasizing Java 25 is RELEASED and REQUIRED
- Add CRITICAL section to .github/copilot-instructions.md with same emphasis
- Document that Java 25 must NOT be downgraded
- Document that preview features must NOT be disabled
- Include JDK 25 download link

This ensures all AI agents understand Java 25 is mandatory and released.

Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>